correction to the overflow task

--- a/src/components/ControlPane/ControlPane.module.css
+++ b/src/components/ControlPane/ControlPane.module.css
@@ -9,9 +9,6 @@
     a little gross, but we haven't seen the tools
     to deal with it yet!
   */
-  margin-bottom: 32px;
-  white-space: nowrap;
-  overflow-x: auto;
 }
 
 .title {
